--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,6 @@
 {
-  "buildCommand": "vite build",
+  "version": 2,
+  "buildCommand": "node skip-ts-check.js && vite build",
   "devCommand": "npm run dev",
   "installCommand": "npm install",
   "framework": "vite",
